--- a/index.html
+++ b/index.html
@@ -1,59 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
-    <title>Trazabilidad Cloud</title>
-  </head>
-  <body>
-    <div style="width: 100%; height: 100vh">
-      <video id="video-bg" autoplay muted loop>
-        <source src="back.mp4" type="video/mp4" />
-      </video>
 
-      
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/index.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <title>Trazabilidad Cloud</title>
+</head>
+
+<body>
+  <div style="width: 100%; height: 100vh">
+    <video id="video-bg" autoplay muted loop>
+      <source src="back.mp4" type="video/mp4" />
+    </video>
+
+
+    <div class="bg-container-options">
       <div class="title">
         <h1>Road Map For Benginners</h1>
       </div>
       <div class="options-container">
-        <div class="card" onclick="redirectToCloudArchitectPage()">
+        <div class="card-principal">
           <h2>Cloud Architect:</h2>
           <p>
             Those responsible for designing, implementing, and managing cloud
             computing solutions for a company.
           </p>
+          <button class="btn btn-primary" onclick="redirectToCloudArchitectPage()">Go!</button>
         </div>
-        <div class="card" onclick="redirectToCloudEngineerPage()">
+        <div class="card-principal">
           <h2>Cloud Engineer</h2>
           <p>
             Individuals in charge of implementing and overseeing cloud computing
             solutions for a company.
           </p>
+          <button class="btn btn-primary" onclick="redirectToCloudEngineerPage()">Go!</button>
         </div>
-        <div class="card" onclick="redirectToCloudAnalystPage()">
+        <div class="card-principal">
           <h2>Cloud Analyst:</h2>
           <p>
             People who offer technical support to clients and colleagues within
             the context of cloud services.
           </p>
+          <button class="btn btn-primary" onclick="redirectToCloudAnalystPage()">Go!</button>
         </div>
-        <div class="card" onclick="redirectToCloudAdministratorPage()">
+        <div class="card-principal">
           <h2>Cloud Administrator:</h2>
           <p>
             The individuals tasked with upholding and troubleshooting issues
             within a company's cloud computing solutions.
           </p>
+          <button class="btn btn-primary" onclick="redirectToCloudAdministratorPage()">Go!</button>
         </div>
-        <div class="card" onclick="redirectToCloudDeveloperPage()">
+        <div class="card-principal">
           <h2>Cloud Developer:</h2>
           <p>
             The developers of applications and services tailored for operation
             in the cloud.
           </p>
+          <button class="btn btn-primary" onclick="redirectToCloudDeveloperPage()">Go!</button>
         </div>
       </div>
     </div>
-    <script src="./index.js"></script>
-  </body>
+  </div>
+  <script src="/js/index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
