--- a/roads/CloudArchitect.html
+++ b/roads/CloudArchitect.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-          body {
+        body {
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
-        }  
+        }
 
         svg {
             width: 1000px;
             height: 200px;
-            
+
         }
 
         circle {
@@ -23,6 +24,7 @@
         }
     </style>
 </head>
+
 <body>
     <svg>
         <circle cx="100" cy="100" r="70" fill="#007BFF" />
@@ -36,7 +38,8 @@
                 <stop offset="100%" style="stop-color: black; stop-opacity: 1" />
             </linearGradient>
         </defs>
-        <path d="M115 100 Q325 -30, 535 100 Q745 230, 955 100" fill="transparent" stroke="url(#gradiente)" stroke-width="5" />
+        <path d="M115 100 Q325 -30, 535 100 Q745 230, 955 100" fill="transparent" stroke="url(#gradiente)"
+            stroke-width="5" />
 
         <text x="100" y="105" font-size="16" text-anchor="middle" fill="#fff">Texto 1</text>
         <text x="290" y="70" font-size="16" text-anchor="middle" fill="#fff">Texto 2</text>
@@ -45,6 +48,7 @@
         <text x="900" y="105" font-size="16" text-anchor="middle" fill="#fff">Texto 5</text>
     </svg>
 
-    
+
 </body>
+
 </html>
