--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       <source src="back.mp4" type="video/mp4" />
     </video>
 
-
     <div class="bg-container-options">
       <div class="title">
         <h1>Road Map For Benginners</h1>
@@ -28,7 +27,8 @@
             Those responsible for designing, implementing, and managing cloud
             computing solutions for a company.
           </p>
-          <button class="btn btn-primary" onclick="redirectToCloudArchitectPage()">Go!</button>
+          <button class="btn btn-primary"><a style="color: white; text-decoration: none;"
+              href="roads/CloudArchitect.html">Go!</a></button>
         </div>
         <div class="card-principal">
           <h2>Cloud Engineer</h2>
@@ -36,7 +36,8 @@
             Individuals in charge of implementing and overseeing cloud computing
             solutions for a company.
           </p>
-          <button class="btn btn-primary" onclick="redirectToCloudEngineerPage()">Go!</button>
+          <button class="btn btn-primary"><a style="color: white; text-decoration: none;"
+              href="roads/CloudEngineer.html">Go!</a></button>
         </div>
         <div class="card-principal">
           <h2>Cloud Analyst:</h2>
@@ -44,7 +45,8 @@
             People who offer technical support to clients and colleagues within
             the context of cloud services.
           </p>
-          <button class="btn btn-primary" onclick="redirectToCloudAnalystPage()">Go!</button>
+          <button class="btn btn-primary"><a style="color: white; text-decoration: none;"
+              href="roads/CloudAnalyst.html">Go!</a></button>
         </div>
         <div class="card-principal">
           <h2>Cloud Administrator:</h2>
@@ -52,7 +54,8 @@
             The individuals tasked with upholding and troubleshooting issues
             within a company's cloud computing solutions.
           </p>
-          <button class="btn btn-primary" onclick="redirectToCloudAdministratorPage()">Go!</button>
+          <button class="btn btn-primary"><a style="color: white; text-decoration: none;"
+              href="roads/CloudAdministrator.html">Go!</a></button>
         </div>
         <div class="card-principal">
           <h2>Cloud Developer:</h2>
@@ -60,7 +63,8 @@
             The developers of applications and services tailored for operation
             in the cloud.
           </p>
-          <button class="btn btn-primary" onclick="redirectToCloudDeveloperPage()">Go!</button>
+          <button class="btn btn-primary"><a style="color: white; text-decoration: none;"
+              href="roads/CloudDeveloper.html">Go!</a></button>
         </div>
       </div>
     </div>
