--- a/roads/CloudArchitect.html
+++ b/roads/CloudArchitect.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/index.css" />
     <style>
         body {
             display: flex;
@@ -16,39 +17,67 @@
         svg {
             width: 1000px;
             height: 200px;
-
+            position: relative;
         }
 
         circle {
             cursor: pointer;
+            position: relative;
+            z-index: 2;
+            fill: white;
+        }
+
+        path {
+            fill: transparent;
+            stroke: url(#gradiente);
+            stroke-width: 5;
+            z-index: 1;
+        }
+
+        text {
+            font-size: 16px;
+            text-anchor: middle;
+            fill: black;
+            font-weight: bold;
         }
     </style>
 </head>
 
 <body>
-    <svg>
-        <circle cx="100" cy="100" r="70" fill="#007BFF" />
-        <circle cx="290" cy="70" r="70" fill="#007BFF" />
-        <circle cx="475" cy="100" r="70" fill="#007BFF" />
-        <circle cx="680" cy="130" r="70" fill="#007BFF" />
-        <circle cx="900" cy="100" r="70" fill="#007BFF" />
-        <defs>
-            <linearGradient id="gradiente" x1="0%" y1="0%" x2="100%" y2="0%">
-                <stop offset="0%" style="stop-color: gold; stop-opacity: 1" />
-                <stop offset="100%" style="stop-color: black; stop-opacity: 1" />
-            </linearGradient>
-        </defs>
-        <path d="M115 100 Q325 -30, 535 100 Q745 230, 955 100" fill="transparent" stroke="url(#gradiente)"
-            stroke-width="5" />
+    <div style="width: 100%; height: 100vh">
+        <video id="video-bg" autoplay muted loop>
+            <source src="../back.mp4" type="video/mp4" />
+        </video>
 
-        <text x="100" y="105" font-size="16" text-anchor="middle" fill="#fff">Texto 1</text>
-        <text x="290" y="70" font-size="16" text-anchor="middle" fill="#fff">Texto 2</text>
-        <text x="477" y="105" font-size="16" text-anchor="middle" fill="#fff">Texto 3</text>
-        <text x="680" y="135" font-size="16" text-anchor="middle" fill="#fff">Texto 4</text>
-        <text x="900" y="105" font-size="16" text-anchor="middle" fill="#fff">Texto 5</text>
-    </svg>
+        <div class="bg-container-options">
+            <div class="title">
+                <h1>Road Map For Cloud Architect</h1>
+            </div>
+            <svg>
+                <defs>
+                    <linearGradient id="gradiente" x1="0%" y1="0%" x2="100%" y2="0%">
+                        <stop offset="0%" style="stop-color: gold; stop-opacity: 1" />
+                        <stop offset="100%" style="stop-color: black; stop-opacity: 1" />
+                    </linearGradient>
+                </defs>
+                <path d="M115 100 Q325 -30, 535 100 Q745 230, 955 100" />
 
+                <circle cx="100" cy="100" r="70" />
+                <circle cx="290" cy="70" r="70" />
+                <circle cx="475" cy="100" r="70" />
+                <circle cx="680" cy="130" r="70" />
+                <circle cx="900" cy="100" r="70" />
 
+                <text x="100" y="105" font-size="16" text-anchor="middle">Texto 1</text>
+                <text x="290" y="70" font-size="16" text-anchor="middle">Texto 2</text>
+                <text x="477" y="105" font-size="16" text-anchor="middle">Texto 3</text>
+                <text x="680" y="135" font-size="16" text-anchor="middle">Texto 4</text>
+                <text x="900" y="105" font-size="16" text-anchor="middle">Texto 5</text>
+            </svg>
+        </div>
+    </div>
+
+    <script src="/js/index.js"></script>
 </body>
 
 </html>
